Change z-index on topic picker to prevent overlaying problems

--- a/app/assets/stylesheets/views/topic/topic_picker.scss
+++ b/app/assets/stylesheets/views/topic/topic_picker.scss
@@ -4,6 +4,7 @@
 .citation_topic_picker {
 	position: relative;
 	.citation_topic_picker_topic_form {
+		z-index: 10;
 		position: absolute;
 		display: flex;
 		align-items: center;
